--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
+    "@storybook/addon-viewport": "4.0.9",
     "@storybook/html": "^4.0.4",
     "babel-loader": "^8.0.4",
     "webpack-cli": "3.1.2"
