--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -11,8 +11,7 @@
     "build": "NODE_ENV=production webpack"
   },
   "engines": {
-    "node": "10.13.0",
-    "yarn": "1.12.1"
+    "node": "10.13.0"
   },
   "author": "",
   "license": "ISC",
