--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -20,6 +20,7 @@
     "@storybook/addon-backgrounds": "4.0.4",
     "bourbon-neat": "3.0.0",
     "css-loader": "1.0.1",
+    "file-loader": "3.0.1",
     "mini-css-extract-plugin": "0.4.4",
     "node-sass": "4.10.0",
     "normalize.css": "8.0.0",
@@ -27,6 +28,7 @@
     "postcss-loader": "3.0.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
+    "url-loader": "1.1.2",
     "webpack": "4.25.1"
   },
   "devDependencies": {
