--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "NODE_ENV=production build-storybook -c .storybook -o .out",
+    "storybook": "start-storybook -s ./stories/static -p 6006",
+    "build-storybook": "NODE_ENV=production build-storybook -c .storybook -o .out -s ./stories/static",
     "watch": "NODE_ENV=development webpack --watch",
     "build": "NODE_ENV=production webpack"
   },
@@ -18,7 +18,6 @@
   "dependencies": {
     "@storybook/addon-a11y": "4.0.4",
     "@storybook/addon-backgrounds": "4.0.4",
-    "bourbon-neat": "3.0.0",
     "css-loader": "1.0.1",
     "file-loader": "3.0.1",
     "mini-css-extract-plugin": "0.4.4",
@@ -26,16 +25,24 @@
     "normalize.css": "8.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
+    "resolve-url-loader": "3.0.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
     "webpack": "4.25.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
+    "@babel/core": "7.2.2",
     "@storybook/addon-viewport": "4.0.9",
     "@storybook/html": "^4.0.4",
-    "babel-loader": "^8.0.4",
+    "@storybook/react": "4.1.6",
+    "babel-loader": "8.0.5",
+    "storybook-addon-jsx": "6.0.0",
     "webpack-cli": "3.1.2"
+  },
+  "peerDependencies": {
+    "bourbon-neat": "3.0.1"
   }
 }
