--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -16,8 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@storybook/addon-a11y": "4.0.4",
-    "@storybook/addon-backgrounds": "4.0.4",
+    "@babel/core": "7.2.2",
+    "babel-loader": "8.0.5",
     "css-loader": "1.0.1",
     "file-loader": "3.0.1",
     "mini-css-extract-plugin": "0.4.4",
@@ -31,16 +31,15 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
-    "webpack": "4.25.1"
+    "webpack": "4.25.1",
+    "webpack-cli": "3.2.1"
   },
   "devDependencies": {
-    "@babel/core": "7.2.2",
+    "@storybook/addon-a11y": "4.1.7",
+    "@storybook/addon-backgrounds": "4.1.7",
     "@storybook/addon-viewport": "4.0.9",
-    "@storybook/html": "^4.0.4",
     "@storybook/react": "4.1.6",
-    "babel-loader": "8.0.5",
-    "storybook-addon-jsx": "6.0.0",
-    "webpack-cli": "3.1.2"
+    "storybook-addon-jsx": "6.0.0"
   },
   "peerDependencies": {
     "bourbon-neat": "3.0.1"
