--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -9,7 +9,7 @@
     "build-storybook": "NODE_ENV=production build-storybook -c .storybook -o .out -s ./stories/static",
     "watch": "NODE_ENV=development webpack --watch",
     "build": "NODE_ENV=production webpack",
-    "release": "semantic-release"
+    "semantic-release": "semantic-release"
   },
   "engines": {
     "node": "10.13.0"
