--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@babel/core": "7.2.2",
     "babel-loader": "8.0.5",
+    "bootstrap": "4.2.1",
     "css-loader": "1.0.1",
     "file-loader": "3.0.1",
     "mini-css-extract-plugin": "0.4.4",
