feat(package): Add default sass export

--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -55,5 +55,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "style": {
+    "scss": "lib/application.scss"
   }
 }
