--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -8,8 +8,8 @@
     "test": "echo \"Error: no test specified\"",
     "storybook": "start-storybook -s ./stories/static -p 6006",
     "build-storybook": "NODE_ENV=production build-storybook -c .storybook -o .out -s ./stories/static",
-    "watch": "NODE_ENV=development webpack --watch",
-    "build": "NODE_ENV=production webpack",
+    "build": "yarn prebuild && gulp html:source sass:source sass:compiled",
+    "prebuild": "gulp clean",
     "semantic-release": "semantic-release"
   },
   "engines": {
@@ -21,7 +21,16 @@
     "babel-loader": "8.0.5",
     "bootstrap": "4.2.1",
     "css-loader": "1.0.1",
+    "del": "3.0.0",
     "file-loader": "3.0.1",
+    "gulp": "4.0.0",
+    "gulp-autoprefixer": "6.0.0",
+    "gulp-babel": "8.0.0",
+    "gulp-rename": "1.4.0",
+    "gulp-sass": "4.0.2",
+    "gulp-sourcemaps": "2.6.4",
+    "gulp-uglify": "3.0.1",
+    "gulp-util": "3.0.8",
     "mini-css-extract-plugin": "0.4.4",
     "node-sass": "4.10.0",
     "normalize.css": "8.0.0",
@@ -32,9 +41,7 @@
     "resolve-url-loader": "3.0.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
-    "url-loader": "1.1.2",
-    "webpack": "4.25.1",
-    "webpack-cli": "3.2.1"
+    "url-loader": "1.1.2"
   },
   "devDependencies": {
     "@storybook/addon-a11y": "4.1.7",
@@ -60,5 +67,14 @@
   },
   "style": {
     "scss": "lib/application.scss"
-  }
+  },
+  "files": [
+    "css/**/*",
+    "es/**/*",
+    "html/**/*",
+    "scripts/**/*",
+    "scss/**/*",
+    "src/**/*",
+    "umd/**/*"
+  ]
 }
