--- a/packages/ray/.circleci/config.yml
+++ b/packages/ray/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - checkout
       - run: yarn install
-      # - run: yarn build
+      - run: yarn build
       - run: npx semantic-release
 
 workflows:
