--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "@babel/core": "7.2.2",
     "babel-loader": "8.0.5",
-    "bootstrap": "4.2.1",
     "css-loader": "1.0.1",
     "del": "3.0.0",
     "file-loader": "3.0.1",
@@ -50,6 +49,7 @@
     "@storybook/addon-viewport": "4.0.9",
     "@storybook/react": "4.1.6",
     "cz-conventional-changelog": "2.1.0",
+    "lodash": "4.17.11",
     "semantic-release": "^15.13.3",
     "storybook-addon-jsx": "6.0.0"
   },
