chore(release): Add npm dist-tag for semantic-release

--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -57,7 +57,10 @@
     "url": "git@github.com:WeConnect/ray.git"
   },
   "publishConfig": {
-    "access": "restricted"
+    "access": "restricted",
+    "publishConfig": {
+      "tag": "dev"
+    }
   },
   "config": {
     "commitizen": {
