--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -19,11 +19,10 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.2.2",
-    "@storybook/addon-a11y": "4.1.7",
     "@storybook/addon-backgrounds": "4.1.11",
     "@storybook/addon-options": "4.1.11",
     "@storybook/addon-viewport": "4.0.9",
-    "@storybook/react": "4.1.6",
+    "@storybook/react": "4.1.11",
     "babel-loader": "8.0.5",
     "css-loader": "1.0.1",
     "cz-conventional-changelog": "2.1.0",
@@ -49,7 +48,8 @@
     "semantic-release": "^15.13.3",
     "storybook-addon-jsx": "6.0.0",
     "style-loader": "0.23.1",
-    "url-loader": "1.1.2"
+    "url-loader": "1.1.2",
+    "webpack": "4.29.1"
   },
   "repository": {
     "type": "git",
