--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -19,6 +19,8 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.2.2",
+    "@commitlint/cli": "7.5.2",
+    "@commitlint/config-conventional": "7.5.0",
     "@storybook/addon-backgrounds": "4.1.11",
     "@storybook/addon-options": "4.1.11",
     "@storybook/addon-viewport": "4.0.9",
@@ -36,11 +38,14 @@
     "gulp-sourcemaps": "2.6.4",
     "gulp-uglify": "3.0.1",
     "gulp-util": "3.0.8",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.3",
     "lodash": "4.17.11",
     "mini-css-extract-plugin": "0.4.4",
     "node-sass": "4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
+    "prettier": "1.16.4",
     "react": "16.7.0",
     "react-dom": "16.7.0",
     "resolve-url-loader": "3.0.0",
@@ -77,5 +82,17 @@
     "scss/**/*",
     "src/**/*",
     "umd/**/*"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,scss,css,md,html}": [
+      "prettier --write",
+      "git add"
+    ]
+  }
 }
