--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -5,7 +5,7 @@
   "author": "Adam Raider <adam.raider@wework.com>",
   "scripts": {
     "commit": "git-cz",
-    "test": "echo \"Error: no test specified\"",
+    "test": "jest",
     "storybook": "start-storybook -s ./stories/static -p 6006",
     "build-storybook": "NODE_ENV=production build-storybook -c .storybook -o .out -s ./stories/static",
     "build": "yarn prebuild && gulp html:source sass:source sass:compiled",
@@ -19,6 +19,7 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "7.2.2",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
     "@commitlint/cli": "7.5.2",
     "@commitlint/config-conventional": "7.5.0",
     "@storybook/addon-backgrounds": "4.1.11",
@@ -39,9 +40,11 @@
     "gulp-uglify": "3.0.1",
     "gulp-util": "3.0.8",
     "husky": "1.3.1",
+    "jest": "24.1.0",
     "lint-staged": "8.1.3",
     "lodash": "4.17.11",
     "mini-css-extract-plugin": "0.4.4",
+    "nanohtml": "1.4.0",
     "node-sass": "4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
