--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -1,14 +1,17 @@
 {
   "name": "@wework/ray",
   "description": "Resources for building interfaces with WeWork's design system",
-  "main": "index.js",
-  "author": "Adam Raider <adam.raider@wework.com>",
+  "main": "es/index.js",
+  "contributors": [
+    "Adam Raider <adam.raider@wework.com>",
+    "Celeste Glavin <celeste.glavin@wework.com>"
+  ],
   "scripts": {
     "commit": "git-cz",
     "test": "jest",
     "storybook": "start-storybook -s ./stories/static -p 6006",
     "build-storybook": "NODE_ENV=production build-storybook -c .storybook -o .out -s ./stories/static",
-    "build": "yarn prebuild && gulp html:source sass:source sass:compiled",
+    "build": "yarn prebuild && gulp html:source sass:source sass:compiled scripts:es scripts:umd",
     "prebuild": "gulp clean",
     "semantic-release": "semantic-release"
   },
@@ -20,16 +23,23 @@
   "devDependencies": {
     "@babel/core": "7.2.2",
     "@babel/plugin-proposal-class-properties": "7.3.0",
+    "@babel/plugin-transform-modules-umd": "7.2.0",
     "@commitlint/cli": "7.5.2",
     "@commitlint/config-conventional": "7.5.0",
     "@storybook/addon-backgrounds": "4.1.11",
     "@storybook/addon-options": "4.1.11",
     "@storybook/addon-viewport": "4.0.9",
     "@storybook/react": "4.1.11",
+    "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "css-loader": "1.0.1",
     "cz-conventional-changelog": "2.1.0",
     "del": "3.0.0",
+    "eslint": "5.14.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-prettier": "3.0.1",
     "file-loader": "3.0.1",
     "gulp": "4.0.0",
     "gulp-autoprefixer": "6.0.0",
@@ -95,6 +105,10 @@
   "lint-staged": {
     "*.{js,json,scss,css,md,html}": [
       "prettier --write",
+      "git add"
+    ],
+    "*.js": [
+      "eslint --fix",
       "git add"
     ]
   }
