--- a/packages/ray/package.json
+++ b/packages/ray/package.json
@@ -29,7 +29,7 @@
     "@storybook/addon-backgrounds": "4.1.11",
     "@storybook/addon-options": "4.1.11",
     "@storybook/addon-viewport": "4.0.9",
-    "@storybook/react": "4.1.11",
+    "@storybook/react": "4.1.12",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "css-loader": "1.0.1",
@@ -40,6 +40,7 @@
     "eslint-config-prettier": "4.0.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-prettier": "3.0.1",
+    "eslint-plugin-react": "7.12.4",
     "file-loader": "3.0.1",
     "gulp": "4.0.0",
     "gulp-autoprefixer": "6.0.0",
@@ -59,7 +60,7 @@
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
     "prettier": "1.16.4",
-    "react": "16.7.0",
+    "react": "16.8.2",
     "react-dom": "16.7.0",
     "resolve-url-loader": "3.0.0",
     "sass-loader": "7.1.0",
