chore: move global packages from core to root

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,10 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "independent"
+  "command": {
+    "publish": {
+      "conventionalCommits": true
+    }
+  },
+  "packages": ["packages/*"],
+  "version": "independent",
+  "npmClient": "yarn"
 }
