--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,19 +1,11 @@
 {
   "name": "@wework/ray",
-  "description": "Resources for building interfaces with WeWork's design system",
   "main": "es/index.js",
-  "contributors": [
-    "Adam Raider <adam.raider@wework.com>",
-    "Celeste Glavin <celeste.glavin@wework.com>"
-  ],
   "scripts": {
-    "commit": "git-cz",
-    "test": "jest",
     "storybook": "start-storybook -s ./stories/static -p 6006",
     "build-storybook": "NODE_ENV=production build-storybook -c .storybook -o .out -s ./stories/static",
     "build": "yarn prebuild && gulp html:source sass:source sass:compiled scripts:es scripts:umd",
-    "prebuild": "gulp clean",
-    "semantic-release": "semantic-release"
+    "prebuild": "gulp clean"
   },
   "engines": {
     "node": "10.13.0"
@@ -24,23 +16,13 @@
     "@babel/core": "7.2.2",
     "@babel/plugin-proposal-class-properties": "7.3.0",
     "@babel/plugin-transform-modules-umd": "7.2.0",
-    "@commitlint/cli": "7.5.2",
-    "@commitlint/config-conventional": "7.5.0",
     "@storybook/addon-backgrounds": "4.1.11",
     "@storybook/addon-options": "4.1.11",
     "@storybook/addon-viewport": "4.0.9",
     "@storybook/react": "4.1.12",
-    "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "css-loader": "1.0.1",
-    "cz-conventional-changelog": "2.1.0",
     "del": "3.0.0",
-    "eslint": "5.14.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "4.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-prettier": "3.0.1",
-    "eslint-plugin-react": "7.12.4",
     "file-loader": "3.0.1",
     "gulp": "4.0.0",
     "gulp-autoprefixer": "6.0.0",
@@ -50,39 +32,25 @@
     "gulp-sourcemaps": "2.6.4",
     "gulp-uglify": "3.0.1",
     "gulp-util": "3.0.8",
-    "husky": "1.3.1",
-    "jest": "24.1.0",
-    "lint-staged": "8.1.3",
     "lodash": "4.17.11",
     "mini-css-extract-plugin": "0.4.4",
     "nanohtml": "1.4.0",
     "node-sass": "4.11.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "postcss-loader": "3.0.0",
-    "prettier": "1.16.4",
     "react": "16.8.2",
     "react-dom": "16.7.0",
     "resolve-url-loader": "3.0.0",
     "sass-loader": "7.1.0",
-    "semantic-release": "^15.13.3",
     "storybook-addon-jsx": "6.0.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
     "webpack": "4.29.1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:WeConnect/ray.git"
-  },
   "publishConfig": {
     "access": "restricted",
     "publishConfig": {
       "tag": "dev"
-    }
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
     }
   },
   "style": {
@@ -96,21 +64,5 @@
     "scss/**/*",
     "src/**/*",
     "umd/**/*"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "lint-staged": {
-    "*.{js,json,scss,css,md,html}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
-  }
+  ]
 }
