--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,6 @@ jobs:
       - checkout
       - run: yarn install
       - run: yarn build
-      - run: npx semantic-release
 
 workflows:
   version: 2
@@ -27,3 +26,11 @@ workflows:
       - release:
           requires:
             - test
+
+deployment:
+  production:
+    branch: master
+    commands:
+      - git config --global user.email $GITHUB_EMAIL
+      - git config --global user.name $GITHUB_USER
+      - yarn lerna:publish
