--- a/lerna.json
+++ b/lerna.json
@@ -12,5 +12,6 @@
   },
   "packages": ["packages/*"],
   "version": "independent",
-  "npmClient": "yarn"
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
