ci: should require tests first

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,6 +53,8 @@ workflows:
               ignore:
                 - master
       - 'build and release':
+          requires:
+            - test
           filters:
             branches:
               only:
