--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@commitlint/cli": "7.5.2",
     "@commitlint/config-conventional": "7.5.0",
     "babel-eslint": "10.0.1",
+    "cz-conventional-changelog": "2.1.0",
     "eslint": "5.14.1",
     "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-prettier": "4.1.0",
