--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
       - run: yarn install
       - run: yarn build
       - run: git config --global user.email "adam.raider@wework.com" && git config --global user.name "adamraider"
-      - run: echo \"//registry.npmjs.org/:_authToken=${NPM_TOKEN}\" > ~/.npmrc
+      - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
       - run: yarn lerna:publish
 
 workflows:
