--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@commitlint/cli": "7.5.2",
     "@commitlint/config-conventional": "7.5.0",
     "babel-eslint": "10.0.1",
+    "coveralls": "3.0.3",
     "cz-conventional-changelog": "2.1.0",
     "eslint": "5.14.1",
     "eslint-config-airbnb-base": "13.1.0",
@@ -31,6 +32,7 @@
   },
   "scripts": {
     "commit": "git-cz",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "bootstrap": "lerna bootstrap",
     "test": "jest",
     "build": "npx lerna run build",
