chore(ray-website): add docs site (#8)
* chore(ray-website): add website

* fix(website): update styles and content

* fix stuff

* fix relative dep

* yay

* fix(website): should destroy instances

* fix: website spacing

* fix: fix up docs and stuff

* fix: remove comment (#7)

* fix: remove comment

* trigger deploy

* chore(release): publish

 - @wework/ray-core@0.0.4

* test(coverage): add coverage reports (#10)

* test(coverage): add coverage reports

* docs(readme): add coveralls badge

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ stats.json
 
 /.cache
 /docs/js
+coverage/
 
 # built files
 packages/core/es
@@ -26,4 +27,5 @@ packages/core/scss
 packages/core/html
 packages/core/.out
 packages/core/storybook-static
-coverage/
+packages/docs-app/public
+packages/docs-app/.cache
