--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -25,7 +25,7 @@
     "dotenv": "^6.1.0",
     "flatpickr": "^4.5.2",
     "fs": "0.0.1-security",
-    "gatsby": "2.0.55",
+    "gatsby": "^2.1.23",
     "gatsby-image": "2.0.20",
     "gatsby-plugin-google-analytics": "^2.0.7",
     "gatsby-plugin-manifest": "^2.0.10",
@@ -40,7 +40,7 @@
     "gatsby-remark-embedded-codesandbox": "^1.2.0",
     "gatsby-remark-images": "3.0.0",
     "gatsby-source-filesystem": "2.0.9",
-    "gatsby-transformer-remark": "2.1.12",
+    "gatsby-transformer-remark": "^2.3.1",
     "gatsby-transformer-sharp": "2.1.8",
     "markdown-it": "^8.4.2",
     "markdown-loader": "^4.0.0",
