--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.9",
   "main": "es/index.js",
   "scripts": {
-    "storybook": "npx start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006  -s ./stories/static",
+    "build-storybook": "NODE_ENV=production build-storybook -c .storybook -o .out -s ./stories/static",
     "build": "yarn prebuild && gulp html:source sass:source sass:compiled scripts:es scripts:umd",
     "clean": "gulp clean",
     "prebuild": "yarn clean"
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@babel/core": "7.2.2",
     "@babel/plugin-transform-modules-umd": "7.2.0",
+    "@emotion/core": "^10.0.7",
+    "@emotion/styled": "^10.0.7",
     "@storybook/addon-actions": "^5.0.0",
     "@storybook/addon-links": "^5.0.0",
     "@storybook/addon-options": "5.0.0",
@@ -22,6 +24,7 @@
     "babel-loader": "8.0.5",
     "css-loader": "1.0.1",
     "del": "3.0.0",
+    "emotion-theming": "^10.0.7",
     "file-loader": "3.0.1",
     "gulp": "4.0.0",
     "gulp-autoprefixer": "6.0.0",
