--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@commitlint/cli": "7.5.2",
     "@commitlint/config-conventional": "7.5.0",
     "babel-eslint": "10.0.1",
+    "commitizen": "^3.0.7",
     "coveralls": "3.0.3",
     "cz-conventional-changelog": "2.1.0",
     "eslint": "5.14.1",
