--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,10 +6,10 @@
   "sass": "scss/ray.scss",
   "scripts": {
     "storybook": "start-storybook -p 6006  -s ./stories/static",
-    "build-storybook": "NODE_ENV=production build-storybook -c .storybook -o .out -s ./stories/static",
     "build": "yarn prebuild && gulp html:source sass:source sass:compiled scripts:es scripts:umd",
     "clean": "gulp clean",
-    "prebuild": "yarn clean"
+    "prebuild": "yarn clean",
+    "netlify:build": "NODE_ENV=production build-storybook -c .storybook -o ../../.out/storybook -s ./stories/static"
   },
   "license": "Apache-2.0",
   "devDependencies": {
