--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@wework/ray-core",
   "version": "0.0.15",
-  "main": "es/index.js",
-  "style": "css/ray.min.css",
-  "sass": "scss/ray.scss",
+  "main": "umd/index.js",
+  "module": "es/index.js",
+  "style": "css/ray-core.min.css",
+  "sass": "scss/ray-core.scss",
   "scripts": {
     "storybook": "start-storybook -p 6006  -s ./stories/static",
-    "build": "yarn prebuild && gulp html:source sass:source sass:compiled scripts:es scripts:umd",
+    "build": "yarn prebuild && gulp html:source sass:source sass:compiled scripts:es scripts:umd scripts:compiled",
     "clean": "gulp clean",
     "prebuild": "yarn clean",
     "netlify:build": "NODE_ENV=production build-storybook -c .storybook -o ../../.out/storybook -s ./stories/static"
@@ -33,8 +34,8 @@
     "gulp-babel": "8.0.0",
     "gulp-rename": "1.4.0",
     "gulp-sass": "4.0.2",
-    "gulp-sourcemaps": "2.6.4",
-    "gulp-uglify": "3.0.1",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp-uglify": "3.0.2",
     "gulp-util": "3.0.8",
     "lodash": "4.17.11",
     "mini-css-extract-plugin": "0.4.4",
@@ -45,6 +46,11 @@
     "react": "16.8.2",
     "react-dom": "16.7.0",
     "resolve-url-loader": "3.0.0",
+    "rollup": "1.6.0",
+    "rollup-plugin-babel": "4.3.2",
+    "rollup-plugin-commonjs": "9.2.1",
+    "rollup-plugin-node-resolve": "4.0.1",
+    "rollup-plugin-replace": "2.1.0",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
@@ -62,5 +68,6 @@
     "src/**/*",
     "umd/**/*"
   ],
-  "gitHead": "c913b9f28177833fda170ce248c8cf1f067ef3fc"
+  "gitHead": "c913b9f28177833fda170ce248c8cf1f067ef3fc",
+  "dependencies": {}
 }
