--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ dependencies:
   cache_directories:
     - ~/.yarn-cache
   override:
-    - yarn install --offline
+    - yarn install
 
 jobs:
   test:
@@ -18,7 +18,7 @@ jobs:
       - image: circleci/node:10.13.0
     steps:
       - checkout
-      - run: yarn install --offline
+      - run: yarn install
       - run: yarn test --coverage
       - run: yarn coveralls
 
@@ -27,7 +27,7 @@ jobs:
       - image: circleci/node:10.13.0
     steps:
       - checkout
-      - run: yarn install --offline
+      - run: yarn install
       - run: yarn build
 
   'build and release':
@@ -35,7 +35,7 @@ jobs:
       - image: circleci/node:10.13.0
     steps:
       - checkout
-      - run: yarn install --offline
+      - run: yarn install
       - run: yarn build
       - run: git config --global user.email "adam.raider@wework.com" && git config --global user.name "adamraider"
       - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
