--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -55,7 +55,6 @@
     "react-ga": "^2.5.5",
     "react-helmet": "^5.2.0",
     "react-router": "^4.3.1",
-    "rehype-react": "^3.1.0",
     "yarn": "1.13.0"
   },
   "devDependencies": {
@@ -70,6 +69,7 @@
     "fs-extra": "^7.0.1",
     "gatsby-remark-static-images": "^1.0.0",
     "html-loader": "^0.5.5",
+    "lodash": "4.17.11",
     "node-sass": "^4.10.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
