--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wework/ray-core",
-  "version": "0.1.11",
+  "version": "0.1.12",
   "main": "umd/index.js",
   "module": "es/index.js",
   "style": "css/ray-core.min.css",
@@ -69,6 +69,5 @@
     "src/**/*",
     "umd/**/*"
   ],
-  "gitHead": "c913b9f28177833fda170ce248c8cf1f067ef3fc",
-  "dependencies": {}
+  "gitHead": "c913b9f28177833fda170ce248c8cf1f067ef3fc"
 }
