--- a/package.json
+++ b/package.json
@@ -43,14 +43,13 @@
     "dev": "lerna run dev --parallel",
     "commit": "git-cz",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "bootstrap": "lerna bootstrap",
+    "bootstrap": "npx lerna bootstrap",
     "test": "jest",
     "build": "npx lerna run build",
     "clean": "rm -rf .out",
-    "lerna:clean": "lerna run clean",
-    "lerna:publish": "lerna publish --yes",
-    "lerna:version": "lerna version --yes",
-    "postinstall": "yarn bootstrap",
+    "lerna:clean": "npx lerna run clean",
+    "lerna:publish": "npx lerna publish --yes",
+    "lerna:version": "npx lerna version --yes",
     "netlify:build": "yarn clean && npx lerna run netlify:build"
   },
   "dependencies": {},
