--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -26,6 +26,7 @@
     "@reach/router": "^1.2.1",
     "add": "2.0.6",
     "classnames": "^2.2.6",
+    "color": "^3.1.0",
     "custom-event": "^1.0.1",
     "dotenv": "^6.1.0",
     "flatpickr": "^4.5.2",
