--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -32,6 +32,7 @@
     "gatsby-image": "2.0.20",
     "gatsby-plugin-manifest": "^2.0.10",
     "gatsby-plugin-react-helmet": "3.0.2",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "2.0.4",
     "gatsby-plugin-sharp": "2.0.13",
     "gatsby-react-router-scroll": "^2.0.1",
