--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "lerna:clean": "npx lerna run clean",
     "lerna:publish": "npx lerna publish --yes",
     "lerna:version": "npx lerna version --yes",
-    "netlify:build": "yarn clean && yarn build && npx lerna run netlify:build"
+    "netlify:build": "yarn clean && yarn build && npx lerna run netlify:build --parallel"
   },
   "dependencies": {},
   "husky": {
