docs: fix incorrect path in scss import statement

--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "scripts": {
     "dev": "lerna run dev --parallel",
+    "dev:core": "lerna run dev --scope=\"@wework/ray-core\" --parallel",
+    "dev:docs": "lerna run dev --scope=\"ray-website-gatsby\" --parallel",
     "commit": "git-cz",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "bootstrap": "npx lerna bootstrap",
