--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,6 +33,7 @@
     "gulp": "4.0.0",
     "gulp-autoprefixer": "6.0.0",
     "gulp-babel": "8.0.0",
+    "gulp-concat": "2.6.1",
     "gulp-rename": "1.4.0",
     "gulp-sass": "4.0.2",
     "gulp-sourcemaps": "2.6.5",
