--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,7 +11,8 @@
     "build": "yarn prebuild && gulp html:source sass:source sass:compiled scripts:es scripts:umd scripts:compiled",
     "clean": "gulp clean",
     "prebuild": "yarn clean",
-    "netlify:build": "NODE_ENV=production build-storybook -c .storybook -o ../../.out/storybook -s ./stories/static"
+    "netlify:build": "NODE_ENV=production build-storybook -c .storybook -o ../../.out/storybook -s ./stories/static",
+    "chromatic": "CHROMATIC_APP_CODE=j9x9t3ojfqi chromatic test --do-not-start"
   },
   "license": "Apache-2.0",
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@storybook/addon-options": "5.0.5",
     "@storybook/addon-viewport": "5.0.5",
     "@storybook/addons": "^5.0.5",
+    "@storybook/core": "^5.0.6",
     "@storybook/react": "^5.0.5",
     "babel-loader": "8.0.5",
     "css-loader": "1.0.1",
@@ -54,6 +56,7 @@
     "rollup-plugin-node-resolve": "4.0.1",
     "rollup-plugin-replace": "2.1.0",
     "sass-loader": "7.1.0",
+    "storybook-chromatic": "^1.3.2",
     "style-loader": "0.23.1",
     "url-loader": "1.1.2",
     "webpack": "4.29.1"
