--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run: yarn bootstrap
       - run: yarn test --coverage
       - run: yarn coveralls
-      - run: yarn chromatic --scope="@wework/ray-core"
+      - run: yarn lerna run chromatic --scope="@wework/ray-core" --parallel
 
   build:
     docker:
