ci: finish setting up chromatic (#112)

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,7 @@
     "clean": "gulp clean",
     "prebuild": "yarn clean",
     "netlify:build": "NODE_ENV=production build-storybook -c .storybook -o ../../.out/storybook -s ./stories/static",
-    "chromatic": "CHROMATIC_APP_CODE=j9x9t3ojfqi chromatic test --exit-zero-on-changes"
+    "chromatic": "CHROMATIC_APP_CODE=j9x9t3ojfqi ./tools/build_chromatic.sh --exit-zero-on-changes"
   },
   "license": "Apache-2.0",
   "devDependencies": {
