--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -73,5 +73,11 @@
     "src/**/*",
     "umd/**/*"
   ],
-  "gitHead": "c913b9f28177833fda170ce248c8cf1f067ef3fc"
+  "gitHead": "c913b9f28177833fda170ce248c8cf1f067ef3fc",
+  "keywords": [
+    "wework",
+    "css",
+    "js",
+    "design-system"
+  ]
 }
