--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -6,7 +6,7 @@
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/weconnect/ray-website"
+    "url": "https://github.com/wework/ray"
   },
   "keywords": [
     "gatsby"
