--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,6 +28,7 @@
     "@storybook/core": "^5.0.6",
     "@storybook/react": "^5.0.5",
     "babel-loader": "8.0.5",
+    "color": "^3.1.1",
     "css-loader": "1.0.1",
     "del": "3.0.0",
     "emotion-theming": "^10.0.7",
