--- a/packages/docs-app/package.json
+++ b/packages/docs-app/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^6.1.0",
     "gatsby": "^2.1.23",
     "gatsby-image": "2.0.20",
+    "gatsby-plugin-google-analytics": "^2.0.19",
     "gatsby-plugin-manifest": "^2.0.10",
     "gatsby-plugin-react-helmet": "3.0.2",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
